--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="{{url_for('static', path='/css/output.css')}}">
 </head>
 <body>
-    <p class="bg-blue-500">Hello!! :)</p>
+    <p class="bg-blue-500">Test Github actions</p>
 </body>
 </html>
